# All Rights Reserved.  Use is subject to license terms.
# 
# See the file "license.terms" for information on usage and
# redistribution of this file, and for a DISCLAIMER OF ALL 
# WARRANTIES.
#

Change history for FreeTTS.
--------------------------

xxxxxxxxx x, 200x Release 1.1.x
    - Fixed race condition in JavaStreamingAudioPlayer that would
      cause output to not be totally cancelled.

September 6, 2002 Release 1.1.1
    - Fixed index.html so that it looks for the RELEASE_NOTES in 
      the proper spot.
    - Added RELEASE_NOTES to the deploy_doc Make target.
    - Fixed all run.bat files to run properly under Win32 systems.
    - Fixed race condition in com.sun.speech.engine.EngineMonitor that
      would cause a NullPointerException in the Player demo on
      occasion.
    - Added emacspeak deploy options
    - Added non-JSAPI version of Emacspeak speech server
    - Fixed non-JSAPI Emacspeak demo crashing problem by using the
      JavaStreamingAudioPlayer (instead of ClipPlayer) as the default.
    - Added RawFileAudioPlayer to write raw audio bytes to a binary file.
    - Changed all  JDK_DIR references to JAVA_HOME
    - Fixed problem in parsing certain dates (MonthRange)
    - Fixed problem with some number parsing 
    - Removed hardcoded array size of LPCResult.residualToFloatMap
    - Fixed problem where output thread was not being shut down when a
      voice was closed.
    - Added TokenGame test which exercises some tricky tokenizing
    - Screen shots of Player in demo/JSAPI/Player/readme.html now of
      current version.
    - parameterized utterance tests to allow easy addition of more
      tests
    - demo/freetts/ClientServer batch files specifies host and port
    - Added contributors agreement: ContributorsAgreement.pdf
    - Added handout: FreeTTS_handout.pdf FreeTTS_handout.sxw
    - Added 'How to contribute' section to the web page
    - Refactored identical demo code in the JSAPI and freetts branches